chore (feat/optimization): add grafana dashboard to performance-report and update DockerFile